# CG-Project

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CG_Project.sln  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  engine  generator  generator.vcxproj  generator.vcxproj.filters  run.sh
Fase1/configs/: test_1_5.xml
Fase1/src/classes/: figure.cpp  list.cpp  point.cpp  point.hpp
Fase1/src/generator/: box.cpp  box.hpp  generator.cpp  plane.cpp  plane.hpp
Fase2/configs/: test_1_6.xml
Fase2/src/classes/: figure.cpp  figure.hpp  point.hpp
Fase2/src/engine/: engine.cpp  group.cpp  group.hpp  transform.hpp  xml_parser.cpp
configs/: test_1_3.xml  test_1_4.xml  test_1_5.xml
engine-files/solar_system/: solar_system_3.xml  solar_system_4.xml
engine-files/test_files_phase_1/: test_1_7.xml
engine-files/test_files_phase_3/: test_3_3.xml
engine-files/test_files_phase_4/: test_4_4.xml  test_4_6.xml  test_4_7.xml
engine-files/vault_of_the_golden_biscuit/: vault_of_the_golden_biscuit.xml
src/aux/: aux.cpp  aux.h  curves.cpp  curves.h  point.h
src/classes/: figure.cpp  figure.h  figure.hpp  list.cpp  list.h  list.hpp  point.cpp  point.h  point.hpp
src/engine/: camera.cpp  camera.h  camera.hpp  engine.cpp  engine.hpp  group.hpp  input_handling.cpp  input_handling.h  model_handling.cpp  model_handling.h  post_processing.cpp  post_processing.h  transform.cpp  xml_parser.cpp  xml_parser.hpp
src/generator/: bezier.cpp  bezier.h  box.cpp  box.h  box.hpp  cone.cpp  cone.h  cylinder.cpp  cylinder.h  generator.cpp  generator.hpp  model.cpp  model.h  plane.cpp  plane.h  plane.hpp  ring.cpp  sphere.cpp  sphere.h  sphere.hpp  torus.cpp  torus.h
src/xml/: xml_parser.cpp  xml_parser.h
test files/solar_system/: solar_system_2.xml  solar_system_3.xml
test files/test_files_phase_1/: test_1_6.xml
test files/test_files_phase_2/: test_2_5.xml  test_2_6.xml
test files/test_files_phase_3/: test_3_3.xml
(+81 files in other folders)
